--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "^4.10.1",
-    "method-override": "^2.3.0",
     "body-parser": "^1.9.2",
-    "morgan": "^1.5.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
+    "express": "^4.10.1",
     "jade": "^1.7.0",
-    "stylus": "^0.49.3",
-    "nib": "^1.0.4"
+    "method-override": "^2.3.0",
+    "morgan": "^1.5.0",
+    "nib": "^1.0.4",
+    "stylus": "^0.49.3"
   },
   "devDependencies": {
+    "del": "^0.1.3",
     "gulp": "^3.8.10",
-    "gulp-nodemon": "^1.0.4",
-    "gulp-livereload": "^2.1.1",
     "gulp-changed": "^1.0.0",
+    "gulp-livereload": "^2.1.1",
+    "gulp-nodemon": "^1.0.4",
     "gulp-stylus": "^1.3.4"
   }
 }
