--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "expressful",
-  "version": "0.0.1",
+  "name": "exadus",
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.9.2",
+    "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.0",
-    "express": "^4.10.1",
-    "jade": "^1.7.0",
+    "express": "^4.10.5",
+    "jade": "^1.8.1",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "nib": "^1.0.4",
@@ -22,6 +22,8 @@
     "gulp-changed": "^1.0.0",
     "gulp-livereload": "^2.1.1",
     "gulp-nodemon": "^1.0.4",
-    "gulp-stylus": "^1.3.4"
+    "gulp-plumber": "^0.6.6",
+    "gulp-stylus": "^1.3.4",
+    "run-sequence": "^1.0.2"
   }
 }
